--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="facebook.css" type="text/css">
 </head>
+
 <body>
     <div class="container">
         <div class="header">
             <div class="logo">
-                <a class="logo-text" href="index.html">Facebook</a>
+                <a class="logo-text" href="index.html">facebook</a>
             </div>
 
 
-            <div class="login"></div>
+            <div class="login">
+                <form action=""></form>
+                <table class="login-controls">
+                    <tr>
+                        <td ><label class="login-label">Email or Mobile</label></td>
+                        <td><label class="login-label">Password</label></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text"></td>
+                        <td><input type="text"></td>
+                        <td><input class="Submit-button" type="submit" value="login"></td>
+
+                    </tr>
+                    <td></td>
+                    <td class="forgotten" href="forgotten.html">Forgotten account?</td>
+
+                    <td></td>
+                    <tr>
+
+                    </tr>
+                </table>
+
+            </div>
         </div>
     </div>
 </body>
+
 </html>
