3rd commit started body-left section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <form action=""></form>
                 <table class="login-controls">
                     <tr>
-                        <td ><label class="login-label">Email or Mobile</label></td>
+                        <td><label class="login-label">Email or Mobile</label></td>
                         <td><label class="login-label">Password</label></td>
                     </tr>
                     <tr>
@@ -40,6 +40,24 @@
 
             </div>
         </div>
+        <div class="main-body">
+            <div class="left-section">
+                <p class="para">Facebook helps you to connect and share with the <br> people in your life.</p>
+                <img class="image" src="Fb_connect_logo.png" alt="">
+
+            </div>
+            <div class="right-section">
+                <h1>Create an account</h1>
+                <form action="">
+                    <input type="text" placeholder="email">
+                </form>
+
+
+            </div>
+
+        </div>
+
+
     </div>
 </body>
 
