--- a/index.html
+++ b/index.html
@@ -48,9 +48,72 @@
             </div>
             <div class="right-section">
                 <h1>Create an account</h1>
+                <h4>It's quick and easy.</h4>
                 <form action="">
-                    <input type="text" placeholder="email">
+                    <table style="border-spacing: 10px 10px;">
+                        <tr>
+                            <td>
+                                <input type="text" placeholder="First name"
+                                    style="height: 20px; width: 330px; border-radius: 3px; font-size: 15px; padding: 5px 10px; border-color: #ccc;">
+                            </td>
+                            <td>
+                                <input type="text" placeholder="Sur name"
+                                    style="height: 20px; width: 330px; border-radius: 3px; font-size: 15px; padding: 5px 10px; border-color: #ccc;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <input type="text" placeholder="mobile number or email address"
+                                    style="height: 20px; width: 692px; border-radius: 3px; font-size: 15px; padding: 5px 10px; border-color: #ccc;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <input type="text" placeholder="New pass word"
+                                    style="height: 20px; width: 692px; border-radius: 3px; font-size: 15px; padding: 5px 10px; border-color: #ccc;">
+                            </td>
+                        </tr>
+                    </table>
                 </form>
+                <h3>Birthday</h3>
+                <div>
+                    <select name="" id="">
+                        <option value="">Day</option>
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                    </select>
+                    <select name="" id="">
+                        <option value="">Month </option>
+                        <option value="">January</option>
+                        <option value="">February</option>
+                        <option value="">March</option>
+                    </select>
+                    <select name="" id="">
+                        <option value="">Year </option>
+                        <option value="">2020</option>
+                        <option value="">2021</option>
+                        <option value="">2022</option>
+                        <option value="">2023</option>
+                        <option value="">2024</option>
+                        <option value="">2025</option>
+                    </select>
+                    <button
+                        style="width: 30px; height: 30px; border-radius: 50%; font-size: 18px; border: 2px solid #000; background-color: #fff; cursor: pointer; margin-left: 10px;">?</button>
+                </div>
+                <h3> Gender</h3>
+
+                <div>
+                    <label><input type="radio" name="gender" value="male"> Male</label>
+                    <label><input type="radio" name="gender" value="female"> Female</label>
+                    <label><input type="radio" name="gender" value="other"> Other</label>
+                    <button style="width: 30px; height: 30px; border-radius: 50%; font-size: 18px; border: 2px solid #000; background-color: #fff; cursor: pointer; margin-left: 10px;">?</button>
+                </div>
+
+                <h6>By clicking Sign UP,you agree to our terms, data policy <br> and Cookie policy. You may receive SMS notification from <br> us and can opt out any time</h6>
+                <button>Sign Up</button>
+
+                <h4>Create a page for a celebrity,band or business</h4>
 
 
             </div>
